2009-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* syntax.c (Fchar_syntax): Minor doc fix (Bug#4400).

2009-09-18  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* emacs.c (inhibit_x_resources): Update doc string for NS.
	(main) [HAVE_NS]: Don't process --no-init-file option.  Remove
	legacy code for -NXHost.  Fix error printf in daemon case.

	* nsterm.h (ns_no_defaults): Remove.

	* nsterm.m (ns_no_defaults): Remove.
	(ns_term_init): Switch ns_no_defaults -> inhibit_x_resources.
	(ns_use_qd_smoothing): Remove legacy variable.
	(EmacsView-windowShouldZoom:): Set frame left_pos, top_pos and
	don't update the NSWindow itself.
	(EmacsView-windowWillUseStandardFrame:defaultFrame:): Improve
	state detection and store user rect ourselves. (Bug #3581)

	* nsfont.m (nsfont_draw) [NS_IMPL_COCOA]: Don't use
	ns_use_qd_smoothing.

	* nsfns.m (x_get_string_resource): Ape just-previous changes to other
	platform versions.  Drop support for emacs-20-style face specs.
	(x-close-connection): Drop PSFlush() under OS X.
	(x-focus-frame): Activate the app first.

2009-09-17  Juanma Barranquero  <lekktu@gmail.com>

	* emacs.c (inhibit_x_resources): New variable.
	(main) [HAVE_NS]: Don't process --quick command line option.
	(syms_of_emacs) <inhibit-x-resources>: DEFVAR_BOOL it.

	* lisp.h (inhibit_x_resources): Declare it extern.

	* w32reg.c (x_get_string_resource):
	* xrdb.c (x_get_string_resource): Obey inhibit_x_resources.

2009-09-17  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (MSDOS_SUPPORT, SOME_MACHINE_LISP): Add
	lisp/term/internal.elc.

2009-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.c (x_get_resource_string): Re-add for non-toolkit builds
	(bug#4461).

2009-09-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* puresize.h (BASE_PURESIZE): Increase to 1290000.

	* Makefile.in (OTHER_FILES): Define using autoconf, not cpp.
	(OBJECTS_MACHINE): Remove, unused.

2009-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>
