@@ -1,3 +1,8 @@
+2009-09-18  Rob Christie  <robchristie@gmail.com> (tiny change)
+
+	* nsmenu.m (EmacsMenu-parseKeyEquiv:): Parse key equivalent more
+	carefully. (Bug #4339)
+
 2009-09-18  Chong Yidong  <cyd@stupidchicken.com>
 
 	* syntax.c (Fchar_syntax): Minor doc fix (Bug#4400).
@@ -24,7 +29,7 @@
 	* nsfns.m (x_get_string_resource): Ape just-previous changes to other
 	platform versions.  Drop support for emacs-20-style face specs.
 	(x-close-connection): Drop PSFlush() under OS X.
-	(x-focus-frame): Activate the app first.
+	(x-focus-frame): Activate the app first. (Bug #4180)
 
 2009-09-17  Juanma Barranquero  <lekktu@gmail.com>
 
